@@ -1,6 +1,7 @@
 0.179
 
 - Update to BVal 2.0.0
+- Adding support for Jackson afterburner module
 
 0.178
 
